objects/nitro__Nitro_Challenge__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>nitro__actionPhrase__c</fullName>
        <label>actionPhrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__applyMultiplier__c</fullName>
        <label>applyMultiplier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__canAchieveChallenge__c</fullName>
        <label>canAchieveChallenge</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__challengeId__c</fullName>
        <description>Nitro ID of the challenge</description>
        <label>challengeId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__completionCount__c</fullName>
        <label>completionCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__customData__c</fullName>
        <label>customData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__dailyAchievementLimit__c</fullName>
        <label>dailyAchievementLimit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__dateIssued__c</fullName>
        <label>dateIssued</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__endTime__c</fullName>
        <label>endTime</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__folderId__c</fullName>
        <label>folderId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__folderName__c</fullName>
        <label>folderName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__fullUrl__c</fullName>
        <label>fullUrl</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__groupPointAward__c</fullName>
        <label>groupPointAward</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__hideUntilEarned__c</fullName>
        <label>hideUntilEarned</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__iconUrl__c</fullName>
        <label>iconUrl</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__isActive__c</fullName>
        <label>isActive</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__isCallback__c</fullName>
        <label>isCallback</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__isGroup__c</fullName>
        <label>isGroup</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__isRepeatable__c</fullName>
        <label>isRepeatable</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__newApiData__c</fullName>
        <label>newApiData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__notificationId__c</fullName>
        <label>notificationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__order__c</fullName>
        <label>order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__originalChallengeId__c</fullName>
        <label>originalChallengeId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__pointAward__c</fullName>
        <label>pointAward</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__pointCategoryId__c</fullName>
        <label>pointCategoryId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__preferenceValues__c</fullName>
        <label>preferenceValues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__preferencesMatchType__c</fullName>
        <label>preferencesMatchType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__preferences__c</fullName>
        <label>preferences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__prereqMatchType__c</fullName>
        <label>prereqMatchType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__ruleMatchType__c</fullName>
        <label>ruleMatchType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__serviceType__c</fullName>
        <label>serviceType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__startTime__c</fullName>
        <label>startTime</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__tags__c</fullName>
        <label>tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__thumbUrl__c</fullName>
        <label>thumbUrl</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Nitro Challenge</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nitro Challenges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>